--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         "background",
         "debugger",
         "scripting",
+        "activeTab",
         "webNavigation",
         "webRequest",
         "tabs"
