--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "e-com - spp",
-    "version": "1.0.0",
+    "name": " не e-com - spp",
+    "version": "1.0.1",
     "background": {
         "service_worker": "background.js",
         "type": "module"
